# fgfwr

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md
include/: constants.hh  zobrist.hh
include/fci/: fen.hh  move.hh
include/move/: lookups.hh  magic.hh  make_move.hh  movegen.hh
include/types/: bitboard.hh  castling_rights.hh  color.hh  move.hh  move_list.hh  piece.hh  position.hh  square.hh
include/uci/: fen.hh
include/util/: string.hh
include/utils/: string.hh
src/: main.cc
src/fci/: fen.cc
src/move/: lookups.cc  make_move.cc  movegen.cc
src/uci/: fen.cc
